# Number-system-converter

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  mainfile.cpp
.github/: FUNDING.yml
src/cli/: drawCLI.cpp  terminalSize.cpp
src/include/: includeLibrary.h
src/mainFolder/: mainfile.cpp
src/numberCheck/: numberCheck.cpp
src/numberConversion/: convertNumberFunction.cpp  convertToNewBase.cpp  convertToOverTenBase.cpp  convertToTen.cpp  convertToUnderTenBase.cpp  convertToUnderTenBaseIntger.cpp
